--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,8 +12,29 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Signup</a></li>
-          <li><a href="#">Login</a></li>
+          
+<% if logged_in? %>
+
+           <li>
+<%= link_to 'User', user_path %>
+           </li>
+           <li class="dropdown">
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+<%= current_user.name %>
+ <span class="caret"></span>
+             </a>
+             <ul class="dropdown-menu">
+               <li>
+<%= link_to 'My profile', user_path(current_user) %>
+               </li>
+               <li role="separator" class="divder"></li>
+               <li>Logout</li>
+             </ul>
+           </li>
+<% else %>
+          <li><%= link_to'登録する', signup_path %></li>
+          <li><%= link_to'ログイン', login_path %></li>
+<% end %>
         </ul>
       </div>
     </div>
