--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,6 +26,14 @@
     </div>
     
     <div class="form-group">
+
+<%= f.label :password, 'Password' %>
+
+<%= f.password_field :password, class: 'form-control' %>
+
+    </div>
+    
+    <div class="form-group">
       
 <%= f.label :password_confirmation, 'Confirmation' %>
 
@@ -33,7 +41,7 @@
 
     </div>
     
-<%= f.submig 'Sign up', class: 'btn btn-primary btn-block' %>
+<%= f.submit 'Sign up', class: 'btn btn-primary btn-block' %>
 
 <% end %>
 
