--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
 <% if logged_in? %>
 
            <li>
-<%= link_to 'User', user_path %>
+<%= link_to 'Users', users_path %>
            </li>
            <li class="dropdown">
              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -28,7 +28,7 @@
 <%= link_to 'My profile', user_path(current_user) %>
                </li>
                <li role="separator" class="divder"></li>
-               <li>Logout</li>
+               <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
              </ul>
            </li>
 <% else %>
