--- a/app/views/cocktailposts/_cocktailposts.html.erb
+++ b/app/views/cocktailposts/_cocktailposts.html.erb
@@ -6,7 +6,9 @@
   
    <li class="media">
      <div class="media-left">
-       <img class="media-object img-rounded" src="<%= gravatar_url(user,options = { size: 50 }) %>" alt="">
+       <img class="media-object img-rounded" src="
+<%= gravatar_url(user,options = { size: 50 }) %>
+"alt="">
      </div>
     <div class="media-body">
       <div>
