--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -2,7 +2,7 @@
  
  <% if current_user.followings?(user) %>
  
- <%= form_for(current_user.relationship.find_by(follow_id: user_id), html:{ method: delete }) do |f| %>
+ <%= form_for(current_user.relationships.find_by(follow_id: user.id), html:{ method: :delete }) do |f| %>
  
  <%= hidden_field_tag :follow_id, user.id %>
  
@@ -15,7 +15,7 @@
  <%= form_for(current_user.relationships.build) do |f| %>
  
  <%= hidden_field_tag :follow_id, user.id %>
- 
+
  <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
  
  <% end %>
