--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -8,7 +8,7 @@
        </div>
        <div class="panel-body">
          <img class="media-object img-rounded img-responsive" src="
-<= gravatar_url(@user, { size: 500 }) %>
+<%= gravatar_url(@user, { size: 500 }) %>
 " alt="">
        </div>
      </div>
