--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
     
 <%= render 'relationships/follow_button', user: @user %>
 
+
   </aside>
   <div class="col-xs-8">
     <ul class="nav nav-tabs nav-justified">
@@ -28,6 +29,8 @@
 件
 <% end %>
 </li>
+
+
       <li class="
 <%= 'active' if current_page?(followings_user_path(@user)) %>
 ">
@@ -38,6 +41,8 @@
 人をフォロー中
 <% end %>
 </li>
+
+
       <li class="
 <%= 'active' if current_page?(followers_user_path(@user)) %>
 ">
@@ -48,6 +53,17 @@
 人
 <% end %>
 </li>
+
+     <li class="
+<%= 'active' if current_page?(favorites_user_path(@user)) %>
+">
+<%= link_to favorites_user_path(@user) do %>
+Favorite<span class="badge">
+  <%= @count_favorites %>
+</span>
+<% end %>
+     </li>
+
     </ul>
     
 <%= render 'cocktailposts/cocktailposts', cocktailposts: @cocktailposts %>
